--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "ℜ𝔇𝔛•••|𝚂𝙰𝚁𝙳𝙰𝚁シ︎🩷🪽",
+    "BOTNAME": "♥👻𝗥σσн 𝙚 𝙉𝙤𝙤𝙧💖🪽",
     "PREFIX": ".",
     "ADMINBOT": [
         "100086033644262",
