--- a/appstate.json
+++ b/appstate.json
@@ -1,57 +1,75 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261576154552616%22%3A%22F20DL1RQ%22%7D",
+        "value": "%7B%2261576584595232%22%3A%22ctbdi793%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     },
     {
         "key": "datr",
-        "value": "VashaFt9UhKPCC69hDcN-eB3",
+        "value": "obYnaGa9fELCPcRxBmC_NgsY",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     },
     {
         "key": "sb",
-        "value": "VashaGydh1lwVSOdjmHK2gqf",
+        "value": "obYnaFDl1cqcs9h991G4fBF_",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "3",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x820",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     },
     {
         "key": "c_user",
-        "value": "61576154552616",
+        "value": "61576584595232",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     },
     {
         "key": "fr",
-        "value": "0m2Hgh3pJbFz3FNYZ.AWdCzDH3NHY44_BsTitXC5R26C7aUqQ-zmIr3O8DKDuGJuViAMQ.BoIatV..AAA.0.0.BoIatz.AWeyHFkZ3P2rN_xRYDb59J-NdXc",
+        "value": "0rPv2lVnP6HSzjc4n.AWduKxJTfbRol7bjjUzRCNrd-oHX5fpN-T_0iT4AXENGr0GGYy4.BoJ7ah..AAA.0.0.BoJ7bP.AWd01Q0nxNCB1pEujLAYkflGYsc",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     },
     {
         "key": "xs",
-        "value": "12%3Ah41gmgrB4A7J9A%3A2%3A1747037046%3A-1%3A-1",
+        "value": "47%3AcmN4cu_t9zjnlQ%3A2%3A1747433171%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     },
     {
         "key": "locale",
@@ -59,8 +77,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101030191%3BT%3A29123886",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     },
     {
         "key": "vpd",
@@ -68,43 +95,16 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2821%3Btimestamp%3A1747428003",
+        "value": "v2%3Bclient_version%3A2821%3Btimestamp%3A1747433185",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100727176%3BT%3A29123800",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-16T20:40:09.322Z",
-        "lastAccessed": "2025-05-16T20:40:09.322Z"
+        "creation": "2025-05-16T22:07:08.466Z",
+        "lastAccessed": "2025-05-16T22:07:08.466Z"
     }
 ]
